Fix ktlint issues